--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,32 @@
+[project]
+requires-python = "~3.11"
+
+[tool.poetry]
+name = "splitwise-cli"
+version = "0.1"
+authors = ["Grzegorz Milka <grzegorzmilka@gmail.com>"]
+description = "A personal, partial CLI interface for Splitwise"
+classifiers = [
+  "Programming Language :: Python :: 3",
+  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
+  "Operating System :: OS Independent",
+]
+license = "AGPLv3"
+readme = "README.md"
+packages = [{ include = "splitwisecli" }]
+
+[tool.poetry.scripts]
+splitwise-cli = "splitwisecli.cli:main"
+
+[tool.poetry.urls]
+Repository = "https://github.com/gregorias/splitwise-cli"
+
+[tool.poetry.dependencies]
+python = "^3.7"
+click = "^8.1"
+click-spinner = "~0.1"
+splitwise = "^2.5"
+
 [build-system]
-requires = ["setuptools>=60"]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
